fixed new highscore responsiveness bug and reduced memory tiles size on mobile

--- a/src/scss/layouts/responsive.scss
+++ b/src/scss/layouts/responsive.scss
@@ -136,6 +136,7 @@
     }
 
     /* 3.3.1 memory blocks styling */
+    /* 3.3.1.1 memory blocks styling wdith*/
     .memory-block-and-start .margin--30 {
         margin: 0rem 10%;
     }
@@ -154,6 +155,20 @@
 
     .memory-block-area {
         padding: 0rem 0rem 3rem 0rem;
+    }
+
+    /* 3.3.1.2 memory blocks styling wdith*/
+
+    .memory-block-height--10 {
+        height: 5rem;
+    }
+
+    .memory-block-height--5 {
+        height: 2.5rem;
+    }
+
+    .memory-block-height--3 {
+        height: 2.5rem;
     }
 
     /* 3.3.2 bottom area */
@@ -181,6 +196,10 @@
     .scores-box {
         margin: 0rem 5rem 2rem 5rem;
         padding: 1.5rem 2.5rem;
+    }
+
+    .high-score-text {
+        top: -3rem;
     }
 
 
